Ensure different components' styles don't interfere with each other
I had some input element styles being imported into the 'Numeric' and 'Text' input components that were interfering with the 'SortOptions' component's element styles. I also updated the styles for SortOptions - the label text should now truncate with an ellipsis when there is insufficient space to display the whole string.

--- a/packages/frontend/src/features/Design/components/Interactive/inputs/Numeric/index.module.css
+++ b/packages/frontend/src/features/Design/components/Interactive/inputs/Numeric/index.module.css
@@ -1,4 +1,4 @@
-label {
+.numeric-field-label {
     display: flex;
     gap: 8px;
 
@@ -7,7 +7,7 @@ label {
     width: 100%;
 }
 
-input {
+.numeric-field-input {
     color: black;
     font-family: Roboto;
     font-size: 1rem;
@@ -19,6 +19,6 @@ input {
     padding: 4px;
 }
 
-input:disabled {
+.numeric-field-input:disabled {
     background-color: rgba(0, 0, 0, 0.12);
 }
